gnu/usr.bin/binutils/gas/testsuite/gas/arc/cpu-warn2.s
; Test warnings when multiple .cpu pseudo-ops are defined.
; { dg-do assemble }
	.cpu EM
	.cpu HS			;{ dg-error "Error: Multiple .cpu directives found" }
